Integrate NullAway for http-server, http-netty