@@ -98,6 +98,7 @@ public final class PipeliningServerHandler extends ChannelInboundHandlerAdapter 
     private final InboundHandler baseInboundHandler = new MessageInboundHandler();
     private final OptimisticBufferingInboundHandler optimisticBufferingInboundHandler = new OptimisticBufferingInboundHandler();
 
+    @Nullable
     private Compressor compressor;
     private BodySizeLimits bodySizeLimits = BodySizeLimits.UNLIMITED;
     private boolean requestDecompressionEnabled = true;
@@ -117,6 +118,7 @@ public final class PipeliningServerHandler extends ChannelInboundHandlerAdapter 
     @Nullable
     private OutboundHandler outboundHandler = null;
 
+    @Nullable
     private ChannelHandlerContext ctx;
     /**
      * {@code true} iff we are in a read operation, before {@link #channelReadComplete}.
@@ -142,6 +144,10 @@ public final class PipeliningServerHandler extends ChannelInboundHandlerAdapter 
 
     public PipeliningServerHandler(RequestHandler requestHandler) {
         this.requestHandler = requestHandler;
+    }
+
+    private ChannelHandlerContext requiredCtx() {
+        return Objects.requireNonNull(ctx, "ctx");
     }
 
     public void setCompressionStrategy(HttpCompressionStrategy compressionStrategy) {
@@ -206,7 +212,7 @@ public final class PipeliningServerHandler extends ChannelInboundHandlerAdapter 
         // has no response yet. If there is, apply backpressure.
         if (!readCalled && outboundQueue.size() <= 1 && inboundHandler.needMore()) {
             readCalled = true;
-            ctx.read();
+            requiredCtx().read();
         }
     }
 
@@ -283,24 +289,24 @@ public final class PipeliningServerHandler extends ChannelInboundHandlerAdapter 
      */
     private ChannelFuture write(Object message, boolean flush, boolean close, boolean needsPromise) {
         if (close) {
-            return ctx.writeAndFlush(message)
+            return requiredCtx().writeAndFlush(message)
                 .addListener(ChannelFutureListener.FIRE_EXCEPTION_ON_FAILURE)
                 .addListener(ChannelFutureListener.CLOSE);
         } else {
             ChannelPromise promise = needsPromise ?
-                ctx.newPromise().addListener(ChannelFutureListener.FIRE_EXCEPTION_ON_FAILURE) :
-                ctx.voidPromise();
+                requiredCtx().newPromise().addListener(ChannelFutureListener.FIRE_EXCEPTION_ON_FAILURE) :
+                requiredCtx().voidPromise();
             if (flush) {
                 // delay flush until readComplete if possible
                 if (reading) {
-                    ctx.write(message, promise);
+                    requiredCtx().write(message, promise);
                     flushPending = true;
                     return promise;
                 } else {
-                    return ctx.writeAndFlush(message, promise);
+                    return requiredCtx().writeAndFlush(message, promise);
                 }
             } else {
-                return ctx.write(message, promise);
+                return requiredCtx().write(message, promise);
             }
         }
     }
@@ -315,7 +321,7 @@ public final class PipeliningServerHandler extends ChannelInboundHandlerAdapter 
         }
         writing = true;
         try {
-            while (ctx.channel().isWritable()) {
+            while (requiredCtx().channel().isWritable()) {
                 // if we have no outboundHandler, check whether the first queued response is ready
                 if (outboundHandler == null) {
                     OutboundAccessImpl next = outboundQueue.peek();
@@ -346,13 +352,13 @@ public final class PipeliningServerHandler extends ChannelInboundHandlerAdapter 
 
     @Override
     public CompletionStage<?> shutdownGracefully() {
-        if (ctx.executor().inEventLoop()) {
+        if (requiredCtx().executor().inEventLoop()) {
             shutdownGracefully0();
         } else {
-            ctx.executor().execute(this::shutdownGracefully0);
+            requiredCtx().executor().execute(this::shutdownGracefully0);
         }
 
-        return NettyHttpServer.toCompletionStage(ctx.channel().closeFuture());
+        return NettyHttpServer.toCompletionStage(requiredCtx().channel().closeFuture());
     }
 
     private void shutdownGracefully0() {
@@ -363,7 +369,7 @@ public final class PipeliningServerHandler extends ChannelInboundHandlerAdapter 
          */
         shuttingDown = true;
         if (inboundHandler == baseInboundHandler && outboundHandler == null && outboundQueue.isEmpty()) {
-            ctx.close();
+            requiredCtx().close();
         } else {
             OutboundAccessImpl lastResponse = outboundQueue.peekLast();
             if (lastResponse != null) {
@@ -373,13 +379,13 @@ public final class PipeliningServerHandler extends ChannelInboundHandlerAdapter 
     }
 
     private NettyByteBodyFactory byteBodyFactory() {
-        return new NettyByteBodyFactory(ctx.channel());
+        return new NettyByteBodyFactory(requiredCtx().channel());
     }
 
     /**
      * An inbound handler is responsible for all incoming messages.
      */
-    private abstract class InboundHandler {
+    private abstract static class InboundHandler {
         /**
          * @return {@code true} iff this handler can process more data. This is usually {@code true},
          * except for streaming requests when there is downstream backpressure.
@@ -427,18 +433,18 @@ public final class PipeliningServerHandler extends ChannelInboundHandlerAdapter 
                     decompressionChannel = null;
                 } else if (HttpHeaderValues.GZIP.contentEqualsIgnoreCase(contentEncoding) ||
                     HttpHeaderValues.X_GZIP.contentEqualsIgnoreCase(contentEncoding)) {
-                    decompressionChannel = new EmbeddedChannel(ctx.channel().id(), ctx.channel().metadata().hasDisconnect(),
-                        ctx.channel().config(), ZlibCodecFactory.newZlibDecoder(ZlibWrapper.GZIP));
+                    decompressionChannel = new EmbeddedChannel(requiredCtx().channel().id(), requiredCtx().channel().metadata().hasDisconnect(),
+                        requiredCtx().channel().config(), ZlibCodecFactory.newZlibDecoder(ZlibWrapper.GZIP));
                 } else if (HttpHeaderValues.DEFLATE.contentEqualsIgnoreCase(contentEncoding) ||
                     HttpHeaderValues.X_DEFLATE.contentEqualsIgnoreCase(contentEncoding)) {
-                    decompressionChannel = new EmbeddedChannel(ctx.channel().id(), ctx.channel().metadata().hasDisconnect(),
-                        ctx.channel().config(), ZlibCodecFactory.newZlibDecoder(ZlibWrapper.ZLIB_OR_NONE));
+                    decompressionChannel = new EmbeddedChannel(requiredCtx().channel().id(), requiredCtx().channel().metadata().hasDisconnect(),
+                        requiredCtx().channel().config(), ZlibCodecFactory.newZlibDecoder(ZlibWrapper.ZLIB_OR_NONE));
                 } else if (Brotli.isAvailable() && HttpHeaderValues.BR.contentEqualsIgnoreCase(contentEncoding)) {
-                    decompressionChannel = new EmbeddedChannel(ctx.channel().id(), ctx.channel().metadata().hasDisconnect(),
-                        ctx.channel().config(), new BrotliDecoder());
+                    decompressionChannel = new EmbeddedChannel(requiredCtx().channel().id(), requiredCtx().channel().metadata().hasDisconnect(),
+                        requiredCtx().channel().config(), new BrotliDecoder());
                 } else if (HttpHeaderValues.SNAPPY.contentEqualsIgnoreCase(contentEncoding)) {
-                    decompressionChannel = new EmbeddedChannel(ctx.channel().id(), ctx.channel().metadata().hasDisconnect(),
-                        ctx.channel().config(), new SnappyFrameDecoder());
+                    decompressionChannel = new EmbeddedChannel(requiredCtx().channel().id(), requiredCtx().channel().metadata().hasDisconnect(),
+                        requiredCtx().channel().config(), new SnappyFrameDecoder());
                 } else {
                     decompressionChannel = null;
                 }
@@ -454,7 +460,7 @@ public final class PipeliningServerHandler extends ChannelInboundHandlerAdapter 
             // getClass for performance
             boolean full = request.getClass() != DefaultHttpRequest.class && request instanceof FullHttpRequest;
             if (full && decompressionChannel == null) {
-                requestHandler.accept(ctx, request, byteBodyFactory().createChecked(bodySizeLimits, ((FullHttpRequest) request).content()), outboundAccess);
+                requestHandler.accept(requiredCtx(), request, byteBodyFactory().createChecked(bodySizeLimits, ((FullHttpRequest) request).content()), outboundAccess);
             } else if (!hasBody(request)) {
                 inboundHandler = droppingInboundHandler;
                 if (full) {
@@ -463,7 +469,7 @@ public final class PipeliningServerHandler extends ChannelInboundHandlerAdapter 
                 if (decompressionChannel != null) {
                     decompressionChannel.finish();
                 }
-                requestHandler.accept(ctx, request, NettyByteBodyFactory.empty(), outboundAccess);
+                requestHandler.accept(requiredCtx(), request, NettyByteBodyFactory.empty(), outboundAccess);
             } else {
                 optimisticBufferingInboundHandler.init(request, outboundAccess);
                 if (decompressionChannel == null) {
@@ -477,6 +483,7 @@ public final class PipeliningServerHandler extends ChannelInboundHandlerAdapter 
             }
         }
 
+        @Nullable
         private static String getContentEncoding(HttpHeaders headers) {
             // from io.netty.handler.codec.http.HttpContentDecoder
 
@@ -512,7 +519,9 @@ public final class PipeliningServerHandler extends ChannelInboundHandlerAdapter 
      * has arrived yet by the time {@link #channelReadComplete} is called.
      */
     private final class OptimisticBufferingInboundHandler extends InboundHandler {
+        @Nullable
         private HttpRequest request;
+        @Nullable
         private OutboundAccessImpl outboundAccess;
         private final List<HttpContent> buffer = new ArrayList<>();
 
@@ -534,12 +543,12 @@ public final class PipeliningServerHandler extends ChannelInboundHandlerAdapter 
             if (message.getClass() == DefaultLastHttpContent.class || message instanceof LastHttpContent) {
                 // we got the full message before readComplete
                 ByteBuf fullBody;
-                if (buffer.size() == 0) {
+                if (buffer.isEmpty()) {
                     fullBody = Unpooled.EMPTY_BUFFER;
                 } else if (buffer.size() == 1) {
-                    fullBody = buffer.get(0).content();
+                    fullBody = buffer.getFirst().content();
                 } else {
-                    CompositeByteBuf composite = ctx.alloc().compositeBuffer();
+                    CompositeByteBuf composite = requiredCtx().alloc().compositeBuffer();
                     for (HttpContent c : buffer) {
                         composite.addComponent(true, c.content());
                     }
@@ -550,7 +559,7 @@ public final class PipeliningServerHandler extends ChannelInboundHandlerAdapter 
                 this.request = null;
                 OutboundAccess outboundAccess = this.outboundAccess;
                 this.outboundAccess = null;
-                requestHandler.accept(ctx, request, byteBodyFactory().createChecked(bodySizeLimits, fullBody), outboundAccess);
+                requestHandler.accept(requiredCtx(), Objects.requireNonNull(request), byteBodyFactory().createChecked(bodySizeLimits, fullBody), Objects.requireNonNull(outboundAccess));
 
                 inboundHandler = baseInboundHandler;
             }
@@ -574,7 +583,7 @@ public final class PipeliningServerHandler extends ChannelInboundHandlerAdapter 
             this.request = null;
             this.outboundAccess = null;
 
-            StreamingInboundHandler streamingInboundHandler = new StreamingInboundHandler(outboundAccess, HttpUtil.is100ContinueExpected(request));
+            StreamingInboundHandler streamingInboundHandler = new StreamingInboundHandler(Objects.requireNonNull(outboundAccess), HttpUtil.is100ContinueExpected(request));
             for (HttpContent content : buffer) {
                 streamingInboundHandler.read(content);
             }
@@ -585,8 +594,8 @@ public final class PipeliningServerHandler extends ChannelInboundHandlerAdapter 
             } else {
                 ((DecompressingInboundHandler) inboundHandler).delegate = streamingInboundHandler;
             }
-            streamingInboundHandler.dest.setExpectedLengthFrom(request.headers());
-            requestHandler.accept(ctx, request, new StreamingNettyByteBody(streamingInboundHandler.dest), outboundAccess);
+            streamingInboundHandler.dest.setExpectedLengthFrom(Objects.requireNonNull(request).headers());
+            requestHandler.accept(requiredCtx(), request, new StreamingNettyByteBody(streamingInboundHandler.dest), outboundAccess);
         }
 
         @Override
@@ -646,7 +655,7 @@ public final class PipeliningServerHandler extends ChannelInboundHandlerAdapter 
 
         @Override
         public void start() {
-            EventLoop eventLoop = ctx.channel().eventLoop();
+            EventLoop eventLoop = requiredCtx().channel().eventLoop();
             if (!eventLoop.inEventLoop()) {
                 eventLoop.execute(this::start);
                 return;
@@ -660,7 +669,7 @@ public final class PipeliningServerHandler extends ChannelInboundHandlerAdapter 
 
         @Override
         public void onBytesConsumed(long bytesConsumed) {
-            EventLoop eventLoop = ctx.channel().eventLoop();
+            EventLoop eventLoop = requiredCtx().channel().eventLoop();
             if (!eventLoop.inEventLoop()) {
                 eventLoop.execute(() -> onBytesConsumed(bytesConsumed));
                 return;
@@ -677,7 +686,7 @@ public final class PipeliningServerHandler extends ChannelInboundHandlerAdapter 
 
         @Override
         public void allowDiscard() {
-            EventLoop eventLoop = ctx.channel().eventLoop();
+            EventLoop eventLoop = requiredCtx().channel().eventLoop();
             if (!eventLoop.inEventLoop()) {
                 eventLoop.execute(this::allowDiscard);
                 return;
@@ -697,7 +706,7 @@ public final class PipeliningServerHandler extends ChannelInboundHandlerAdapter 
 
         @Override
         public void disregardBackpressure() {
-            EventLoop eventLoop = ctx.channel().eventLoop();
+            EventLoop eventLoop = requiredCtx().channel().eventLoop();
             if (!eventLoop.inEventLoop()) {
                 eventLoop.execute(this::disregardBackpressure);
                 return;
@@ -811,11 +820,14 @@ public final class PipeliningServerHandler extends ChannelInboundHandlerAdapter 
          * The request that caused this response. This is used for compression decisions.
          */
         private final HttpRequest request;
+        @Nullable
         private final Http1RequestEvent jfrEvent;
         /**
          * The handler that will perform the actual write operation.
          */
+        @Nullable
         private OutboundHandler handler;
+        @Nullable
         private Object attachment = null;
         private boolean closeAfterWrite = false;
 
@@ -909,7 +921,7 @@ public final class PipeliningServerHandler extends ChannelInboundHandlerAdapter 
                 throw new IllegalStateException("Only one response per request");
             }
 
-            EventLoop eventLoop = ctx.channel().eventLoop();
+            EventLoop eventLoop = requiredCtx().channel().eventLoop();
             if (!eventLoop.inEventLoop()) {
                 eventLoop.execute(() -> write(handler));
                 return;
@@ -992,7 +1004,7 @@ public final class PipeliningServerHandler extends ChannelInboundHandlerAdapter 
             if (compressor == null) {
                 return;
             }
-            Compressor.Session compressionSession = compressor.prepare(ctx, request, response, contentLength);
+            Compressor.Session compressionSession = compressor.prepare(requiredCtx(), request, response, contentLength);
             if (compressionSession != null) {
                 // if content-length and transfer-encoding are unset, we will close anyway.
                 // if this is a full response, there's special handling below in OutboundHandler
@@ -1011,7 +1023,7 @@ public final class PipeliningServerHandler extends ChannelInboundHandlerAdapter 
          */
         final OutboundAccessImpl outboundAccess;
 
-        Compressor.Session compressionSession;
+        Compressor. @Nullable Session compressionSession;
 
         private OutboundHandler(OutboundAccessImpl outboundAccess) {
             this.outboundAccess = outboundAccess;
@@ -1026,7 +1038,7 @@ public final class PipeliningServerHandler extends ChannelInboundHandlerAdapter 
                 writePotentialEnd(content, flush, shouldCloseAfterContent(last));
             } else {
                 // slow path
-                writeCompressing0(content, flush, last);
+                writeCompressing0(compressionSession, content, flush, last);
             }
         }
 
@@ -1035,18 +1047,18 @@ public final class PipeliningServerHandler extends ChannelInboundHandlerAdapter 
             ChannelFuture future = write(content, flush, close, record);
             if (record) {
                 future.addListener((ChannelFutureListener) f -> {
-                    outboundAccess.jfrEvent.end();
-                    if (outboundAccess.jfrEvent.shouldCommit()) {
-                        outboundAccess.jfrEvent.populateChannel(ctx.channel());
-                        outboundAccess.jfrEvent.populateRequest(outboundAccess.request);
-                        outboundAccess.jfrEvent.commit();
+                    Http1RequestEvent jfrEvent = Objects.requireNonNull(outboundAccess.jfrEvent);
+                    jfrEvent.end();
+                    if (jfrEvent.shouldCommit()) {
+                        jfrEvent.populateChannel(requiredCtx().channel());
+                        jfrEvent.populateRequest(outboundAccess.request);
+                        jfrEvent.commit();
                     }
                 });
             }
         }
 
-        private void writeCompressing0(HttpContent content, boolean flush, boolean last) {
-            Compressor.Session compressionSession = this.compressionSession;
+        private void writeCompressing0(Compressor.Session compressionSession, HttpContent content, boolean flush, boolean last) {
             compressionSession.push(content.content());
             if (last) {
                 compressionSession.finish();
@@ -1105,6 +1117,7 @@ public final class PipeliningServerHandler extends ChannelInboundHandlerAdapter 
             new DefaultFullHttpResponse(HttpVersion.HTTP_1_1, HttpResponseStatus.CONTINUE, Unpooled.EMPTY_BUFFER);
 
         boolean written = false;
+        @Nullable
         OutboundHandler next;
 
         private ContinueOutboundHandler(OutboundAccessImpl outboundAccess) {
@@ -1165,17 +1178,17 @@ public final class PipeliningServerHandler extends ChannelInboundHandlerAdapter 
      * Handler that writes a {@link StreamedHttpResponse}.
      */
     private final class StreamingOutboundHandler extends OutboundHandler implements BufferConsumer {
-        private final EventLoopFlow flow = new EventLoopFlow(ctx.channel().eventLoop());
+        private final EventLoopFlow flow = new EventLoopFlow(requiredCtx().channel().eventLoop());
         private final OutboundAccessImpl outboundAccess;
+        @Nullable
         private HttpResponse initialMessage;
-        private BufferConsumer.Upstream upstream;
+        private BufferConsumer. @Nullable Upstream upstream;
         private boolean earlyComplete = false;
         private boolean writtenLast = false;
         private long incompleteWrittenBytes = 0;
 
         StreamingOutboundHandler(OutboundAccessImpl outboundAccess, HttpResponse initialMessage) {
             super(outboundAccess);
-            assert initialMessage != null;
             if (initialMessage instanceof FullHttpResponse) {
                 throw new IllegalArgumentException("Cannot have a full response as the initial message of a streaming response");
             }
@@ -1188,7 +1201,7 @@ public final class PipeliningServerHandler extends ChannelInboundHandlerAdapter 
             if (initialMessage != null) {
                 write(initialMessage, false, false, false);
                 initialMessage = null;
-                upstream.start();
+                Objects.requireNonNull(upstream).start();
             }
             if (earlyComplete) {
                 // onComplete has been called before the first writeSome. Trigger onComplete
@@ -1198,7 +1211,7 @@ public final class PipeliningServerHandler extends ChannelInboundHandlerAdapter 
                 long written = incompleteWrittenBytes;
                 if (written > 0) {
                     incompleteWrittenBytes = 0;
-                    upstream.onBytesConsumed(written);
+                    Objects.requireNonNull(upstream).onBytesConsumed(written);
                 }
             }
         }
@@ -1223,7 +1236,7 @@ public final class PipeliningServerHandler extends ChannelInboundHandlerAdapter 
                 int n = buf.readable();
                 writeCompressing(new DefaultHttpContent(NettyReadBufferFactory.toByteBuf(buf)), true, false);
                 incompleteWrittenBytes += n;
-                if (ctx.channel().isWritable()) {
+                if (requiredCtx().channel().isWritable()) {
                     writeSome();
                 }
             } else {
@@ -1243,7 +1256,7 @@ public final class PipeliningServerHandler extends ChannelInboundHandlerAdapter 
                 if (LOG.isWarnEnabled()) {
                     LOG.warn("Reactive response received an error after some data has already been written. This error cannot be forwarded to the client.", t);
                 }
-                ctx.close();
+                requiredCtx().close();
 
                 requestHandler.responseWritten(outboundAccess.attachment);
             }
@@ -1288,8 +1301,9 @@ public final class PipeliningServerHandler extends ChannelInboundHandlerAdapter 
             // - while cancel() may trigger onComplete/onError, `removed` is true at this point, so
             //   they won't call responseWritten in turn
             requestHandler.responseWritten(outboundAccess.attachment);
-            upstream.allowDiscard();
+            Objects.requireNonNull(upstream).allowDiscard();
             outboundHandler = null;
         }
     }
+
 }
